--- a/software-engineer-backend/package.json
+++ b/software-engineer-backend/package.json
@@ -17,6 +17,12 @@
   },
   "devDependencies": {
     "@types/node": "^20.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "eslint": "^8.42.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.15.0",
     "ts-node": "^10.9.1",
