--- a/software-engineer-backend/docker-compose.yml
+++ b/software-engineer-backend/docker-compose.yml
@@ -1,16 +1,14 @@
 version: '3.9'
+
 services:
   db:
-    image: postgres:13
-    container_name: db
-    platform: linux/x86_64
+    image: postgres:15
+    restart: always
+    environment:
+      - POSTGRES_PASSWORD=123456
+      - POSTGRES_USER=root
+      - POSTGRES_DB=pagarme
     ports:
       - 3002:5432
-    environment:
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=123456
-    restart: always
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "root"]
-      timeout: 10s
-      retries: 5
+    volumes:
+      - ./docker-data/db:/var/lib/postgresql/data
