--- a/software-engineer-backend/package.json
+++ b/software-engineer-backend/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:fix": "eslint --fix ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "dotenv": "^16.1.4",
     "fastify": "^4.18.0",
     "jsonwebtoken": "^9.0.0"
